# source-code

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN-PROPOSAL.md  README.md  config.example.yaml  nx.json  package.json  pnpm-lock.yaml  project.json
.github/workflows/: ci.yml  gitleaks.yml  pages.yml  pr-validate.yml  release-binaries.yml  release.yml
docs/: PLAN-2025-11-25.md  getting-started.md  index.md  mcp-spec-compliance-gap-analysis.md  protocol-coverage.md  release.md  server-message-handling-plan.md  telemetry-collection.md  usage-guide.md  use-cases.md
docs/articles/: ai-agents-mcp-cli.md  e2e-conformance-testing.md  from-zero-to-production.md  local-dev-prototyping.md  multi-server-workflows.md  platform-engineering.md  shell-scripting-mcp.md  testing-mcp-servers.md
docs/features/: ad-hoc-connections.md  authentication.md  background-jobs.md  daemon-mode.md  discovery-driven-cli.md  elicitation-and-sampling.md  event-system.md  fuzzy-matching.md  named-configs-and-aliases.md  output-formats.md  profile-overlays.md  request-timeouts.md  transports.md
docs/files/: AGENTS.md  INSTALL.md  SKILL.md  llms-full.txt  llms.txt
docs/launch/: README.md  channel-playbooks.md  content-calendar.md  launch-plan.md  performance-tracking.md  post-launch-roadmap.md  social-media-strategy.md
docs/reference/: cli-reference.md  config-reference.md
site/: README.md  astro.config.mjs  ec.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.mjs
site/public/: CNAME  install.sh  robots.txt
site/src/: content.config.ts
site/src/components/: FeatureGrid.astro  Footer.astro  Header.astro  InteractiveTerminal.tsx  MermaidLoader.astro  ProtocolPeek.astro  Terminal.astro  ThemeToggle.astro
site/src/layouts/: BaseLayout.astro  DocsLayout.astro
site/src/lib/: nav.ts  rehype-resolve-links.ts  rehype-strip-first-h1.ts  remark-mermaid.ts  site-telemetry.ts
site/src/pages/: INSTALL.md.ts  SKILL.md.ts  index.astro  llms-full.txt.ts  llms.txt.ts
site/src/styles/: globals.css
src/: lib.rs  main.rs  man.rs  telemetry.rs
src/app/: mod.rs
src/apps/: bridge.rs  dynamic.rs  manifest.rs  mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/dispatch/: mod.rs
src/mcp/: client.rs  handler.rs  mod.rs  model.rs  protocol.rs  vsock_shim.rs
src/observability/: mod.rs
src/output/: mod.rs
src/runtime/: daemon.rs  events.rs  host.rs  mod.rs  sinks.rs  state.rs  token_store.rs
tests/: integration.rs  mcp_shim_cli.rs  support.rs
tools/release/: post-version.mjs  version-actions.js
(+1 files in other folders)
