[package]
name = "mcp2cli"
version = "0.1.3"
edition = "2024"
license = "Apache-2.0"
description = "Turn any Model Context Protocol server into a native command-line application — typed --flags from JSON Schema, multi-transport, daemon mode, and shell-friendly output formats."
repository = "https://github.com/mcp2cli/source-code"
homepage = "https://mcp2cli.dev"
documentation = "https://mcp2cli.dev/docs"
readme = "README.md"
keywords = ["mcp", "cli", "llm", "ai", "agent"]
categories = ["command-line-utilities", "development-tools"]

[lints.clippy]
# Allow a handful of stylistic lints the codebase trips today; each
# one is either pre-existing intentional code (event recorder taking
# many independent booleans, helper items alongside tests for proximity)
# or something we'd only fix in a dedicated cleanup pass.
too_many_arguments = "allow"
items_after_test_module = "allow"
drop_non_drop = "allow"
collapsible_if = "allow"
redundant_closure = "allow"
new_without_default = "allow"
unnecessary_sort_by = "allow"

[profile.release]
# Shrink the shipped binary and trim a few percent of runtime cost
# per release. LTO is thin so builds stay under a few minutes on
# GitHub-Actions runners; codegen-units = 1 lets LLVM produce
# better-inlined code. Strip debug + symbols to land at ~5-7 MB.
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.89"
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.38", features = ["derive", "string"] }
directories = "6.0.0"
figment = { version = "0.10.19", features = ["env", "yaml"] }
indexmap = { version = "2.9", features = ["serde"] }
http = "1.3.1"
libc = "0.2"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1.17", features = ["client", "client-legacy", "http1", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
url = "2.5.4"
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.20.0"